examples/test/testpolicy14022.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14022
  namespace: namespace173
spec:
  podSelector:
    matchLabels:
      key42: value42
      key36: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value13
          key34: value46
          key11: value0
      podSelector:
        matchLabels:
          key29: value6
          key7: value43
